feat: enhance command registration and error handling in index.ts
fix: improve semver comparison functions for better readability and performance

refactor: streamline semver increment logic in inc.js

fix: update lt.js for consistent semver comparison handling

feat: add satisfies.js for version range validation

refactor: optimize semver.js for better maintainability

feat: implement sorting functionality in sort.js

fix: enhance valid.js for improved version validation

chore: update package.json with new dependencies and versions

feat: add core path utilities in paths.ts for sandbox management

feat: implement tarball extraction functionality in extract.ts

feat: create registry management system in registry/index.ts

feat: define registry types and interfaces in types.ts

feat: add utility functions for version picking and downloading in util.ts

chore: configure ESLint with TypeScript support in eslint.config.cjs

--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "check:style": "prettier --check \"**/*.{js,ts,json,md}\""
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "eslint": "^8.46.0",
-    "prettier": "^2.8.8",
-  "@typescript-eslint/parser": "^5.63.0",
-  "@typescript-eslint/eslint-plugin": "^5.63.0"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "commander": "^14.0.1"
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.38.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "commander": "^14.0.1",
+    "eslint": "^9.38.0",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2"
   }
 }
